# stx-send-recv

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  build.sh
lib/: CMakeLists.txt
lib/e2ee_ctrl_msg/: CMakeLists.txt
lib/e2ee_ctrl_msg/interface/: MessageHandlerI.hpp
lib/socket/: CMakeLists.txt  Socket.cpp
lib/socket/include/: Socket.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
src/client/include/: Client.hpp  ClientMessageHandler.hpp
src/server/: CMakeLists.txt  Server.cpp  Server.hpp  ServerMessageHandler.cpp  Session.cpp  main.cpp
src/server/include/: Server.hpp  ServerMessageHandler.hpp  Session.hpp
